--- a/index.html
+++ b/index.html
@@ -8,13 +8,102 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a href="/">
+                <span>Web</span>Studio
+            </a>
+        
+            <ul>
+                <li>
+                    <a href="">Студия</a>
+                </li>
+                <li>
+                    <a href="">Портфолио</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
+        <!-- Section hero -->
+        <section>
+            <h1>Эффективные решения <br /> для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
 
+        <!-- Section features -->
+        <section>
+            <h2>Oсобенности</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Section working process -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/working-process-1.jpg" alt="Working process" width="370"></li>
+                <li><img src="./images/working-process-2.jpg" alt="Working process" width="370"></li>
+                <li><img src="./images/working-process-3.jpg" alt="Working process" width="370"></li>
+            </ul>
+        </section>
+
+        <!-- Section our team -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/team-member-1.jpg" alt="Team member's foto" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <span>Product Designer</span>
+                </li>
+                <li>
+                    <img src="./images/team-member-2.jpg" alt="Team member's foto" width="270">
+                    <h3>Ольга Репина</h3>
+                    <span>Frontend Developer</span>
+                </li>
+                <li>
+                    <img src="./images/team-member-3.jpg" alt="Team member's foto" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <span>Marketing</span>
+                </li>
+                <li>
+                    <img src="./images/team-member-4.jpg" alt="Team member's foto" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <span>UI Designer</span>
+                </li>
+            </ul> 
+        </section>
     </main>
     <footer>
-        
+        <a href="/">
+            <span>Web</span>Studio
+        </a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26<br>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
     </footer>
 </body>
 </html>
