--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/working-process-1.jpg" alt="Working process" width="370"></li>
-                <li><img src="./images/working-process-2.jpg" alt="Working process" width="370"></li>
-                <li><img src="./images/working-process-3.jpg" alt="Working process" width="370"></li>
+                <li><img src="./images/working-process-1.jpg" alt="Изображение с рабочим процессом" width="370"></li>
+                <li><img src="./images/working-process-2.jpg" alt="Изображение с рабочим процессом" width="370"></li>
+                <li><img src="./images/working-process-3.jpg" alt="Изображение с рабочим процессом" width="370"></li>
             </ul>
         </section>
 
@@ -73,22 +73,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team-member-1.jpg" alt="Team member's foto" width="270">
+                    <img src="./images/team-member-1.jpg" alt="Фото члена команды" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <span>Product Designer</span>
                 </li>
                 <li>
-                    <img src="./images/team-member-2.jpg" alt="Team member's foto" width="270">
+                    <img src="./images/team-member-2.jpg" alt="Фото члена команды" width="270">
                     <h3>Ольга Репина</h3>
                     <span>Frontend Developer</span>
                 </li>
                 <li>
-                    <img src="./images/team-member-3.jpg" alt="Team member's foto" width="270">
+                    <img src="./images/team-member-3.jpg" alt="Фото члена команды" width="270">
                     <h3>Николай Тарасов</h3>
                     <span>Marketing</span>
                 </li>
                 <li>
-                    <img src="./images/team-member-4.jpg" alt="Team member's foto" width="270">
+                    <img src="./images/team-member-4.jpg" alt="Фото члена команды" width="270">
                     <h3>Михаил Ермаков</h3>
                     <span>UI Designer</span>
                 </li>
@@ -100,7 +100,7 @@
             <span>Web</span>Studio
         </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26<br>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
